[package]
name = "lcr"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

[[bin]]
name = "lcr"
path = "src/main.rs"

[lib]
name = "lcr"

[dependencies]
ureq = { version = "2", features = ["json"] }
anyhow = "1.0"
failure = "0.1"
thiserror = "1"
once_cell = "1"
headless_chrome = "0"
regex = "1"
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }