[package]
name = "lcr"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

[[bin]]
name = "lcr"
path = "src/main.rs"

[lib]
name = "lcr"

[dependencies]
ureq = { version = "2", features = ["json"] }
anyhow = "1"
failure = "0.1"
thiserror = "1"
once_cell = "1"
headless_chrome = "0"
regex = "1"
serde_json = "1"
time = {version = "0.3", features = ["macros", "parsing"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "3", features = ["derive"] }
itertools = "0.10.3"

# There's a bug in the crates.io sheets library where the batchUpdate URL is wrong, causing a 404 from Google.
# So patch that with a path dependency.
sheets = { path = "sheets", version = "0.4.1" }
url = "2.2.2"
tokio = "1.20.1"
