[package]
name = "lcr"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

[[bin]]
name = "lcr"
path = "src/main.rs"

[lib]
name = "lcr"

[dependencies]
ureq = { version = "2", features = ["json"] }
anyhow = "1"
failure = "0.1"
thiserror = "2"
once_cell = "1"
headless_chrome = "0"
regex = "1"
serde_json = "1"
time = {version = "0.3", features = ["macros", "parsing"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
itertools = "0.14"
sheets = "0.7"
url = "2"
tokio = {version = "1", features = ["full"]}
